infrastructure/k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: iammo9/blog-client
          # resources:
          #   limits:
          #     cpu: "500m"
          #     memory: "512Mi"
          #   requests:
          #     cpu: "200m"
          #     memory: "256Mi"
