infrastructure/k8s/client-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-service
spec:
  type: ClusterIP # ClusterIP is the default type of service (optional)
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
      # nodePort: 31515 # optional, if not specified, k8s will assign a random port
