infrastructure/k8s/comments-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-service
spec:
  type: ClusterIP # ClusterIP is the default type of service (optional)
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
      # nodePort: 31515 # optional, if not specified, k8s will assign a random port
