infrastructure/k8s/event-bus-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-clusterip-service
spec:
  type: ClusterIP # ClusterIP is the default type of service (optional)
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
      # nodePort: 31515 # optional, if not specified, k8s will assign a random port
