infrastructure/k8s/posts-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-service
spec:
  type: ClusterIP # ClusterIP is the default type of service (optional)
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
      # nodePort: 31515 # optional, if not specified, k8s will assign a random port
