infrastructure/k8s/query-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-service
spec:
  type: ClusterIP # ClusterIP is the default type of service (optional)
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
      # nodePort: 31515 # optional, if not specified, k8s will assign a random port
