infrastructure/k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: blog.com
      http:
        paths:
          - path: /posts/create
            pathType: ImplementationSpecific
            backend:
              service:
                name: posts-clusterip-service
                port:
                  number: 4000
          - path: /posts
            pathType: ImplementationSpecific
            backend:
              service:
                name: query-clusterip-service
                port:
                  number: 4002
          - path: /posts/?(.*)/comments
            pathType: ImplementationSpecific
            backend:
              service:
                name: comments-clusterip-service
                port:
                  number: 4001
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-clusterip-service
                port:
                  number: 3000
